# SpectraSoft

./: .gitignore  11222.csv  REMAINING_WORK.toml  RunSpectroscopy.bat  analysis_results.csv  atmega.ino  check_esp32.py  constants.py  data.db  job5_simulation.csv  main.py  pyproject.toml  requirements.txt  sequence_data.csv  simulation_data.xlsx  source_codes.json  test_db.py  test_hardware.py
core/: analysis_worker.py  attenuator_programmer.py  correction_engine.py  csv_override.py  database.py  hardware.py  json_export.py  models.py  sequence_engine.py  uart_manager.py
import_data/: attenuator.json  master_elements.json  page_01_source.json  page_03_channel.json  page_04_drift.json  page_05_wc.json  page_07_master.json  source_codes.json
scratch/: add_shortcuts.py  check_sequence_engine.py  fix_imports.py  fix_to_f_keys.py  inspect_db.py  verify_sequence_run.py
tests/: test_analysis_worker_uses_live_adc.py  test_sequence_engine_source_codes.py  test_source_codes_page.py
ui/: analysis_run_page.py  main_window.py  ui_theme.py
ui/anainf/: group_panel.py  page_01_condition.py  page_01_source.py  page_02_attenuator.py  page_03_channel.py  page_03_element.py  page_04_channel.py  page_04_drift.py  page_05_measurement.py  page_05_working_curve.py  page_06_matrix.py  page_06_recalibration.py  page_07_master.py  page_07_working_curve.py  page_08_correction.py  page_08_display.py  page_09_purity.py  page_09_standard.py  page_10_display.py  page_11_master_curve.py  page_12_analytical_mode.py  page_13_control_chart.py
ui/analysis/: analysis_run.py  analysis_run_job2.py  (+10 more)
(+5 files in other folders)
