[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "spectrasoft"
version = "0.1.0"
description = "SpectraSoft spectroscopy analysis application"
requires-python = ">=3.9"
dependencies = [
  "altgraph==0.17.5",
  "packaging==26.0",
  "pefile==2023.2.7",
  "pyinstaller==6.11.0",
  "pyinstaller-hooks-contrib==2026.3",
  "PyQt6==6.8.1",
  "PyQt6-Qt6==6.8.2",
  "PyQt6_sip==13.11.1",
  "pyserial==3.5",
  "pywin32-ctypes==0.2.3",
  "setuptools==82.0.1",
  "SQLAlchemy==2.0.36",
  "typing_extensions==4.15.0",
]
